--- a/10_code/plt_bounding_box.ipynb
+++ b/10_code/plt_bounding_box.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Fetch all wastewater treatment plants within California's boundary (# changed to Texas)\n",
     "query = f\"\"\"\n",
-    "    area[admin_level=4][\"name\"=\"Texas\"]->.searchArea; \n",
+    "    area[admin_level=4][\"name\"=\"Arizona\"]->.searchArea; \n",
     "    (\n",
     "    way[\"man_made\"=\"wastewater_plant\"](area.searchArea);\n",
     "    );\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,33 +119,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Plant_27449381</td>\n",
-       "      <td>POLYGON ((-96.77142 32.72644, -96.76411 32.728...</td>\n",
-       "      <td>POINT (-96.77224 32.73390)</td>\n",
+       "      <td>24th Street Water Treatment Plant</td>\n",
+       "      <td>POLYGON ((-112.03022 33.53292, -112.03434 33.5...</td>\n",
+       "      <td>POINT (-112.03251 33.52970)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>City of Leander Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-97.84240 30.58064, -97.84133 30.581...</td>\n",
-       "      <td>POINT (-97.84113 30.58042)</td>\n",
+       "      <td>Southeast WRF</td>\n",
+       "      <td>POLYGON ((-111.69424 33.38022, -111.69588 33.3...</td>\n",
+       "      <td>POINT (-111.69546 33.38153)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Plant_29415748</td>\n",
-       "      <td>POLYGON ((-97.82238 30.55487, -97.82204 30.555...</td>\n",
-       "      <td>POINT (-97.82171 30.55485)</td>\n",
+       "      <td>South Tempe Water Plant</td>\n",
+       "      <td>POLYGON ((-111.89480 33.36221, -111.89708 33.3...</td>\n",
+       "      <td>POINT (-111.89713 33.35923)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Plant_29660147</td>\n",
-       "      <td>POLYGON ((-97.79693 30.46380, -97.79665 30.463...</td>\n",
-       "      <td>POINT (-97.79780 30.46284)</td>\n",
+       "      <td>Plant_29231740</td>\n",
+       "      <td>POLYGON ((-112.58222 33.35924, -112.58222 33.3...</td>\n",
+       "      <td>POINT (-112.58287 33.35867)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Albert H. Ullrich Water Treatment Plant</td>\n",
-       "      <td>POLYGON ((-97.79899 30.29007, -97.79933 30.289...</td>\n",
-       "      <td>POINT (-97.79621 30.28999)</td>\n",
+       "      <td>Plant_30133555</td>\n",
+       "      <td>POLYGON ((-112.10849 33.42238, -112.11284 33.4...</td>\n",
+       "      <td>POINT (-112.11020 33.42530)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -154,109 +154,90 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>Plant_1202606682</td>\n",
-       "      <td>POLYGON ((-95.48860 30.05945, -95.48851 30.059...</td>\n",
-       "      <td>POINT (-95.48691 30.05825)</td>\n",
+       "      <th>551</th>\n",
+       "      <td>Plant_1191529380</td>\n",
+       "      <td>POLYGON ((-113.23664 34.59078, -113.23660 34.5...</td>\n",
+       "      <td>POINT (-113.23677 34.59093)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>Plant_1211640644</td>\n",
-       "      <td>POLYGON ((-95.56537 30.03827, -95.56554 30.038...</td>\n",
-       "      <td>POINT (-95.56586 30.03892)</td>\n",
+       "      <th>552</th>\n",
+       "      <td>Plant_1191529381</td>\n",
+       "      <td>POLYGON ((-113.23712 34.59068, -113.23708 34.5...</td>\n",
+       "      <td>POINT (-113.23725 34.59083)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>Plant_1215636411</td>\n",
-       "      <td>POLYGON ((-97.66318 30.70890, -97.66259 30.709...</td>\n",
-       "      <td>POINT (-97.66279 30.70874)</td>\n",
+       "      <th>553</th>\n",
+       "      <td>Plant_1191529424</td>\n",
+       "      <td>POLYGON ((-113.23964 34.58821, -113.23961 34.5...</td>\n",
+       "      <td>POINT (-113.23993 34.58838)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>541</th>\n",
-       "      <td>Windemere Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-97.64107 30.45672, -97.64046 30.456...</td>\n",
-       "      <td>POINT (-97.64115 30.45588)</td>\n",
+       "      <th>554</th>\n",
+       "      <td>Plant_1192930076</td>\n",
+       "      <td>POLYGON ((-110.31199 31.65411, -110.31201 31.6...</td>\n",
+       "      <td>POINT (-110.31384 31.65197)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>542</th>\n",
-       "      <td>Plant_1219904979</td>\n",
-       "      <td>POLYGON ((-96.31856 30.55889, -96.31839 30.558...</td>\n",
-       "      <td>POINT (-96.31859 30.55873)</td>\n",
+       "      <th>555</th>\n",
+       "      <td>Plant_1223523646</td>\n",
+       "      <td>POLYGON ((-112.46479 33.59523, -112.46482 33.5...</td>\n",
+       "      <td>POINT (-112.46344 33.59882)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>543 rows × 3 columns</p>\n",
+       "<p>556 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      WWTP_name  \\\n",
-       "0                                Plant_27449381   \n",
-       "1    City of Leander Wastewater Treatment Plant   \n",
-       "2                                Plant_29415748   \n",
-       "3                                Plant_29660147   \n",
-       "4       Albert H. Ullrich Water Treatment Plant   \n",
-       "..                                          ...   \n",
-       "538                            Plant_1202606682   \n",
-       "539                            Plant_1211640644   \n",
-       "540                            Plant_1215636411   \n",
-       "541        Windemere Wastewater Treatment Plant   \n",
-       "542                            Plant_1219904979   \n",
+       "                             WWTP_name  \\\n",
+       "0    24th Street Water Treatment Plant   \n",
+       "1                        Southeast WRF   \n",
+       "2              South Tempe Water Plant   \n",
+       "3                       Plant_29231740   \n",
+       "4                       Plant_30133555   \n",
+       "..                                 ...   \n",
+       "551                   Plant_1191529380   \n",
+       "552                   Plant_1191529381   \n",
+       "553                   Plant_1191529424   \n",
+       "554                   Plant_1192930076   \n",
+       "555                   Plant_1223523646   \n",
        "\n",
        "                                              geometry  \\\n",
-       "0    POLYGON ((-96.77142 32.72644, -96.76411 32.728...   \n",
-       "1    POLYGON ((-97.84240 30.58064, -97.84133 30.581...   \n",
-       "2    POLYGON ((-97.82238 30.55487, -97.82204 30.555...   \n",
-       "3    POLYGON ((-97.79693 30.46380, -97.79665 30.463...   \n",
-       "4    POLYGON ((-97.79899 30.29007, -97.79933 30.289...   \n",
+       "0    POLYGON ((-112.03022 33.53292, -112.03434 33.5...   \n",
+       "1    POLYGON ((-111.69424 33.38022, -111.69588 33.3...   \n",
+       "2    POLYGON ((-111.89480 33.36221, -111.89708 33.3...   \n",
+       "3    POLYGON ((-112.58222 33.35924, -112.58222 33.3...   \n",
+       "4    POLYGON ((-112.10849 33.42238, -112.11284 33.4...   \n",
        "..                                                 ...   \n",
-       "538  POLYGON ((-95.48860 30.05945, -95.48851 30.059...   \n",
-       "539  POLYGON ((-95.56537 30.03827, -95.56554 30.038...   \n",
-       "540  POLYGON ((-97.66318 30.70890, -97.66259 30.709...   \n",
-       "541  POLYGON ((-97.64107 30.45672, -97.64046 30.456...   \n",
-       "542  POLYGON ((-96.31856 30.55889, -96.31839 30.558...   \n",
+       "551  POLYGON ((-113.23664 34.59078, -113.23660 34.5...   \n",
+       "552  POLYGON ((-113.23712 34.59068, -113.23708 34.5...   \n",
+       "553  POLYGON ((-113.23964 34.58821, -113.23961 34.5...   \n",
+       "554  POLYGON ((-110.31199 31.65411, -110.31201 31.6...   \n",
+       "555  POLYGON ((-112.46479 33.59523, -112.46482 33.5...   \n",
        "\n",
-       "                       centroid  \n",
-       "0    POINT (-96.77224 32.73390)  \n",
-       "1    POINT (-97.84113 30.58042)  \n",
-       "2    POINT (-97.82171 30.55485)  \n",
-       "3    POINT (-97.79780 30.46284)  \n",
-       "4    POINT (-97.79621 30.28999)  \n",
-       "..                          ...  \n",
-       "538  POINT (-95.48691 30.05825)  \n",
-       "539  POINT (-95.56586 30.03892)  \n",
-       "540  POINT (-97.66279 30.70874)  \n",
-       "541  POINT (-97.64115 30.45588)  \n",
-       "542  POINT (-96.31859 30.55873)  \n",
+       "                        centroid  \n",
+       "0    POINT (-112.03251 33.52970)  \n",
+       "1    POINT (-111.69546 33.38153)  \n",
+       "2    POINT (-111.89713 33.35923)  \n",
+       "3    POINT (-112.58287 33.35867)  \n",
+       "4    POINT (-112.11020 33.42530)  \n",
+       "..                           ...  \n",
+       "551  POINT (-113.23677 34.59093)  \n",
+       "552  POINT (-113.23725 34.59083)  \n",
+       "553  POINT (-113.23993 34.58838)  \n",
+       "554  POINT (-110.31384 31.65197)  \n",
+       "555  POINT (-112.46344 33.59882)  \n",
        "\n",
-       "[543 rows x 3 columns]"
+       "[556 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36mArchive\u001b[m\u001b[m                         Status Track.gsheet\n",
-      "\u001b[1m\u001b[36mPPT From Christine\u001b[m\u001b[m              \u001b[1m\u001b[36mWWTP Lists\u001b[m\u001b[m\n",
-      "\u001b[35mSatellite Imagery_Automated RGB\u001b[m\u001b[m \u001b[1m\u001b[36mtif_bounding_box\u001b[m\u001b[m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls"
    ]
   },
   {
@@ -268,17 +249,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fail to plot .DS_Store\n",
-      "fail to plot bounding box\n"
+      "\u001b[1m\u001b[36mArchive\u001b[m\u001b[m                         Status Track.gsheet\n",
+      "\u001b[1m\u001b[36mNew_Images\u001b[m\u001b[m                      \u001b[1m\u001b[36mWWTP Lists\u001b[m\u001b[m\n",
+      "\u001b[1m\u001b[36mPPT From Christine\u001b[m\u001b[m              \u001b[1m\u001b[36mtif_bounding_box\u001b[m\u001b[m\n",
+      "\u001b[35mSatellite Imagery_Automated RGB\u001b[m\u001b[m\n"
      ]
     }
    ],
    "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# use loop to open the image in tif folder, and plot the bounding box on it\n",
     "# read all the file names in the folder\n",
-    "for file in os.listdir('tif_bounding_box/texas/'):\n",
+    "for file in os.listdir('tif_bounding_box/Images of All 50 States/Arizona'):\n",
     "    try:\n",
-    "        with rasterio.open(os.path.join('tif_bounding_box/texas/', file)) as src:\n",
+    "        with rasterio.open(os.path.join('tif_bounding_box/Images of All 50 States/Arizona', file)) as src:\n",
     "            # if file.startswith('download'):\n",
     "                # continue\n",
     "            # Read the image data\n",
@@ -295,7 +287,7 @@
     "            df_name.boundary.plot(ax=ax, color='red', linewidth=1.5)\n",
     "            plt.axis('off')\n",
     "            # save the figure\n",
-    "            plt.savefig(os.path.join('tif_bounding_box/texas/bounding box', name + '.png'), bbox_inches='tight', pad_inches=0)\n",
+    "            plt.savefig(os.path.join('tif_bounding_box/Images of All 50 States/Arizona', name + '.png'), bbox_inches='tight', pad_inches=0)\n",
     "            plt.close()\n",
     "    except:\n",
     "        print(f\"fail to plot {file}\")"
@@ -325,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
