--- a/10_code/plt_bounding_box.ipynb
+++ b/10_code/plt_bounding_box.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Fetch all wastewater treatment plants within California's boundary (# changed to Texas)\n",
     "query = f\"\"\"\n",
-    "    area[admin_level=4][\"name\"=\"Arizona\"]->.searchArea; \n",
+    "    area[admin_level=4][\"name\"=\"Florida\"]->.searchArea; \n",
     "    (\n",
     "    way[\"man_made\"=\"wastewater_plant\"](area.searchArea);\n",
     "    );\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -119,33 +119,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>24th Street Water Treatment Plant</td>\n",
-       "      <td>POLYGON ((-112.03022 33.53292, -112.03434 33.5...</td>\n",
-       "      <td>POINT (-112.03251 33.52970)</td>\n",
+       "      <td>Plant_42335670</td>\n",
+       "      <td>POLYGON ((-82.68656 27.71888, -82.68566 27.718...</td>\n",
+       "      <td>POINT (-82.68428 27.71757)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Southeast WRF</td>\n",
-       "      <td>POLYGON ((-111.69424 33.38022, -111.69588 33.3...</td>\n",
-       "      <td>POINT (-111.69546 33.38153)</td>\n",
+       "      <td>North District Wastewater Treatment Plant</td>\n",
+       "      <td>POLYGON ((-80.15290 25.92083, -80.15283 25.920...</td>\n",
+       "      <td>POINT (-80.15027 25.91937)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>South Tempe Water Plant</td>\n",
-       "      <td>POLYGON ((-111.89480 33.36221, -111.89708 33.3...</td>\n",
-       "      <td>POINT (-111.89713 33.35923)</td>\n",
+       "      <td>Seas Backwash Basins</td>\n",
+       "      <td>POLYGON ((-81.55302 28.37564, -81.55292 28.375...</td>\n",
+       "      <td>POINT (-81.55280 28.37562)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Plant_29231740</td>\n",
-       "      <td>POLYGON ((-112.58222 33.35924, -112.58222 33.3...</td>\n",
-       "      <td>POINT (-112.58287 33.35867)</td>\n",
+       "      <td>Plant_75199142</td>\n",
+       "      <td>POLYGON ((-82.78727 28.01833, -82.78586 28.018...</td>\n",
+       "      <td>POINT (-82.78684 28.01985)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Plant_30133555</td>\n",
-       "      <td>POLYGON ((-112.10849 33.42238, -112.11284 33.4...</td>\n",
-       "      <td>POINT (-112.11020 33.42530)</td>\n",
+       "      <td>Pine Hills Water Treatment Plant</td>\n",
+       "      <td>POLYGON ((-81.45539 28.56399, -81.45627 28.563...</td>\n",
+       "      <td>POINT (-81.45590 28.56545)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -154,84 +154,84 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>551</th>\n",
-       "      <td>Plant_1191529380</td>\n",
-       "      <td>POLYGON ((-113.23664 34.59078, -113.23660 34.5...</td>\n",
-       "      <td>POINT (-113.23677 34.59093)</td>\n",
+       "      <th>944</th>\n",
+       "      <td>Plant_1237053617</td>\n",
+       "      <td>POLYGON ((-81.21605 28.62159, -81.21608 28.621...</td>\n",
+       "      <td>POINT (-81.21662 28.62162)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>552</th>\n",
-       "      <td>Plant_1191529381</td>\n",
-       "      <td>POLYGON ((-113.23712 34.59068, -113.23708 34.5...</td>\n",
-       "      <td>POINT (-113.23725 34.59083)</td>\n",
+       "      <th>945</th>\n",
+       "      <td>Plant_1237058198</td>\n",
+       "      <td>POLYGON ((-81.28426 28.68673, -81.28608 28.687...</td>\n",
+       "      <td>POINT (-81.28584 28.68695)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>553</th>\n",
-       "      <td>Plant_1191529424</td>\n",
-       "      <td>POLYGON ((-113.23964 34.58821, -113.23961 34.5...</td>\n",
-       "      <td>POINT (-113.23993 34.58838)</td>\n",
+       "      <th>946</th>\n",
+       "      <td>Plant_1237059631</td>\n",
+       "      <td>POLYGON ((-81.38361 28.82465, -81.38261 28.824...</td>\n",
+       "      <td>POINT (-81.38249 28.82437)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>554</th>\n",
-       "      <td>Plant_1192930076</td>\n",
-       "      <td>POLYGON ((-110.31199 31.65411, -110.31201 31.6...</td>\n",
-       "      <td>POINT (-110.31384 31.65197)</td>\n",
+       "      <th>947</th>\n",
+       "      <td>Plant_1237059632</td>\n",
+       "      <td>POLYGON ((-81.38368 28.81960, -81.38290 28.819...</td>\n",
+       "      <td>POINT (-81.38212 28.82104)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>555</th>\n",
-       "      <td>Plant_1223523646</td>\n",
-       "      <td>POLYGON ((-112.46479 33.59523, -112.46482 33.5...</td>\n",
-       "      <td>POINT (-112.46344 33.59882)</td>\n",
+       "      <th>948</th>\n",
+       "      <td>Plant_1237059633</td>\n",
+       "      <td>POLYGON ((-81.39065 28.81890, -81.39011 28.818...</td>\n",
+       "      <td>POINT (-81.39020 28.82228)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>556 rows × 3 columns</p>\n",
+       "<p>949 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             WWTP_name  \\\n",
-       "0    24th Street Water Treatment Plant   \n",
-       "1                        Southeast WRF   \n",
-       "2              South Tempe Water Plant   \n",
-       "3                       Plant_29231740   \n",
-       "4                       Plant_30133555   \n",
-       "..                                 ...   \n",
-       "551                   Plant_1191529380   \n",
-       "552                   Plant_1191529381   \n",
-       "553                   Plant_1191529424   \n",
-       "554                   Plant_1192930076   \n",
-       "555                   Plant_1223523646   \n",
+       "                                     WWTP_name  \\\n",
+       "0                               Plant_42335670   \n",
+       "1    North District Wastewater Treatment Plant   \n",
+       "2                         Seas Backwash Basins   \n",
+       "3                               Plant_75199142   \n",
+       "4             Pine Hills Water Treatment Plant   \n",
+       "..                                         ...   \n",
+       "944                           Plant_1237053617   \n",
+       "945                           Plant_1237058198   \n",
+       "946                           Plant_1237059631   \n",
+       "947                           Plant_1237059632   \n",
+       "948                           Plant_1237059633   \n",
        "\n",
        "                                              geometry  \\\n",
-       "0    POLYGON ((-112.03022 33.53292, -112.03434 33.5...   \n",
-       "1    POLYGON ((-111.69424 33.38022, -111.69588 33.3...   \n",
-       "2    POLYGON ((-111.89480 33.36221, -111.89708 33.3...   \n",
-       "3    POLYGON ((-112.58222 33.35924, -112.58222 33.3...   \n",
-       "4    POLYGON ((-112.10849 33.42238, -112.11284 33.4...   \n",
+       "0    POLYGON ((-82.68656 27.71888, -82.68566 27.718...   \n",
+       "1    POLYGON ((-80.15290 25.92083, -80.15283 25.920...   \n",
+       "2    POLYGON ((-81.55302 28.37564, -81.55292 28.375...   \n",
+       "3    POLYGON ((-82.78727 28.01833, -82.78586 28.018...   \n",
+       "4    POLYGON ((-81.45539 28.56399, -81.45627 28.563...   \n",
        "..                                                 ...   \n",
-       "551  POLYGON ((-113.23664 34.59078, -113.23660 34.5...   \n",
-       "552  POLYGON ((-113.23712 34.59068, -113.23708 34.5...   \n",
-       "553  POLYGON ((-113.23964 34.58821, -113.23961 34.5...   \n",
-       "554  POLYGON ((-110.31199 31.65411, -110.31201 31.6...   \n",
-       "555  POLYGON ((-112.46479 33.59523, -112.46482 33.5...   \n",
+       "944  POLYGON ((-81.21605 28.62159, -81.21608 28.621...   \n",
+       "945  POLYGON ((-81.28426 28.68673, -81.28608 28.687...   \n",
+       "946  POLYGON ((-81.38361 28.82465, -81.38261 28.824...   \n",
+       "947  POLYGON ((-81.38368 28.81960, -81.38290 28.819...   \n",
+       "948  POLYGON ((-81.39065 28.81890, -81.39011 28.818...   \n",
        "\n",
-       "                        centroid  \n",
-       "0    POINT (-112.03251 33.52970)  \n",
-       "1    POINT (-111.69546 33.38153)  \n",
-       "2    POINT (-111.89713 33.35923)  \n",
-       "3    POINT (-112.58287 33.35867)  \n",
-       "4    POINT (-112.11020 33.42530)  \n",
-       "..                           ...  \n",
-       "551  POINT (-113.23677 34.59093)  \n",
-       "552  POINT (-113.23725 34.59083)  \n",
-       "553  POINT (-113.23993 34.58838)  \n",
-       "554  POINT (-110.31384 31.65197)  \n",
-       "555  POINT (-112.46344 33.59882)  \n",
+       "                       centroid  \n",
+       "0    POINT (-82.68428 27.71757)  \n",
+       "1    POINT (-80.15027 25.91937)  \n",
+       "2    POINT (-81.55280 28.37562)  \n",
+       "3    POINT (-82.78684 28.01985)  \n",
+       "4    POINT (-81.45590 28.56545)  \n",
+       "..                          ...  \n",
+       "944  POINT (-81.21662 28.62162)  \n",
+       "945  POINT (-81.28584 28.68695)  \n",
+       "946  POINT (-81.38249 28.82437)  \n",
+       "947  POINT (-81.38212 28.82104)  \n",
+       "948  POINT (-81.39020 28.82228)  \n",
        "\n",
-       "[556 rows x 3 columns]"
+       "[949 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -250,9 +250,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m\u001b[36mArchive\u001b[m\u001b[m                         Status Track.gsheet\n",
-      "\u001b[1m\u001b[36mNew_Images\u001b[m\u001b[m                      \u001b[1m\u001b[36mWWTP Lists\u001b[m\u001b[m\n",
-      "\u001b[1m\u001b[36mPPT From Christine\u001b[m\u001b[m              \u001b[1m\u001b[36mtif_bounding_box\u001b[m\u001b[m\n",
-      "\u001b[35mSatellite Imagery_Automated RGB\u001b[m\u001b[m\n"
+      "\u001b[1m\u001b[36mPPT From Christine\u001b[m\u001b[m              \u001b[1m\u001b[36mWWTP Lists\u001b[m\u001b[m\n",
+      "\u001b[35mSatellite Imagery_Automated RGB\u001b[m\u001b[m \u001b[1m\u001b[36mtif_bounding_box\u001b[m\u001b[m\n"
      ]
     }
    ],
@@ -262,15 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# use loop to open the image in tif folder, and plot the bounding box on it\n",
     "# read all the file names in the folder\n",
-    "for file in os.listdir('tif_bounding_box/Images of All 50 States/Arizona'):\n",
+    "for file in os.listdir('tif_bounding_box/Images of All 50 States/Florida'):\n",
     "    try:\n",
-    "        with rasterio.open(os.path.join('tif_bounding_box/Images of All 50 States/Arizona', file)) as src:\n",
+    "        with rasterio.open(os.path.join('tif_bounding_box/Images of All 50 States/Florida', file)) as src:\n",
     "            # if file.startswith('download'):\n",
     "                # continue\n",
     "            # Read the image data\n",
@@ -287,18 +286,11 @@
     "            df_name.boundary.plot(ax=ax, color='red', linewidth=1.5)\n",
     "            plt.axis('off')\n",
     "            # save the figure\n",
-    "            plt.savefig(os.path.join('tif_bounding_box/Images of All 50 States/Arizona', name + '.png'), bbox_inches='tight', pad_inches=0)\n",
+    "            plt.savefig(os.path.join('tif_bounding_box/Images of All 50 States/Florida', name + '.png'), bbox_inches='tight', pad_inches=0)\n",
     "            plt.close()\n",
     "    except:\n",
     "        print(f\"fail to plot {file}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
