progress bar added

--- a/10_code/plt_bounding_box.ipynb
+++ b/10_code/plt_bounding_box.ipynb
@@ -21,7 +21,9 @@
     "# import geemap\n",
     "import json\n",
     "import multiprocessing\n",
-    "\n"
+    "\n",
+    "from tqdm import tqdm\n",
+    "import time\n"
    ]
   },
   {
@@ -45,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Fetch all wastewater treatment plants within California's boundary (# changed to Texas)\n",
     "query = f\"\"\"\n",
-    "    area[admin_level=4][\"name\"=\"Florida\"]->.searchArea; \n",
+    "    area[admin_level=4][\"name\"=\"Georgia\"]->.searchArea; \n",
     "    (\n",
     "    way[\"man_made\"=\"wastewater_plant\"](area.searchArea);\n",
     "    );\n",
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,33 +121,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Plant_42335670</td>\n",
-       "      <td>POLYGON ((-82.68656 27.71888, -82.68566 27.718...</td>\n",
-       "      <td>POINT (-82.68428 27.71757)</td>\n",
+       "      <td>Plant_31457419</td>\n",
+       "      <td>POLYGON ((-84.97626 32.41316, -84.97538 32.413...</td>\n",
+       "      <td>POINT (-84.97721 32.41063)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>North District Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-80.15290 25.92083, -80.15283 25.920...</td>\n",
-       "      <td>POINT (-80.15027 25.91937)</td>\n",
+       "      <td>Plant_34770800</td>\n",
+       "      <td>POLYGON ((-84.56326 33.34549, -84.56406 33.345...</td>\n",
+       "      <td>POINT (-84.56446 33.34747)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Seas Backwash Basins</td>\n",
-       "      <td>POLYGON ((-81.55302 28.37564, -81.55292 28.375...</td>\n",
-       "      <td>POINT (-81.55280 28.37562)</td>\n",
+       "      <td>Plant_34770998</td>\n",
+       "      <td>POLYGON ((-84.55196 33.74347, -84.55110 33.743...</td>\n",
+       "      <td>POINT (-84.55363 33.74202)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Plant_75199142</td>\n",
-       "      <td>POLYGON ((-82.78727 28.01833, -82.78586 28.018...</td>\n",
-       "      <td>POINT (-82.78684 28.01985)</td>\n",
+       "      <td>South Cobb Water Reclamation Facility</td>\n",
+       "      <td>POLYGON ((-84.53757 33.77225, -84.54008 33.773...</td>\n",
+       "      <td>POINT (-84.53795 33.77505)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Pine Hills Water Treatment Plant</td>\n",
-       "      <td>POLYGON ((-81.45539 28.56399, -81.45627 28.563...</td>\n",
-       "      <td>POINT (-81.45590 28.56545)</td>\n",
+       "      <td>Plant_34771069</td>\n",
+       "      <td>POLYGON ((-83.59370 33.95150, -83.59415 33.950...</td>\n",
+       "      <td>POINT (-83.59615 33.95137)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -154,84 +156,84 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>944</th>\n",
-       "      <td>Plant_1237053617</td>\n",
-       "      <td>POLYGON ((-81.21605 28.62159, -81.21608 28.621...</td>\n",
-       "      <td>POINT (-81.21662 28.62162)</td>\n",
+       "      <th>223</th>\n",
+       "      <td>Plant_1186316344</td>\n",
+       "      <td>POLYGON ((-85.34845 34.46021, -85.34848 34.460...</td>\n",
+       "      <td>POINT (-85.34755 34.45935)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>945</th>\n",
-       "      <td>Plant_1237058198</td>\n",
-       "      <td>POLYGON ((-81.28426 28.68673, -81.28608 28.687...</td>\n",
-       "      <td>POINT (-81.28584 28.68695)</td>\n",
+       "      <th>224</th>\n",
+       "      <td>Former Chatham County Sanitary Sewerage Lift S...</td>\n",
+       "      <td>POLYGON ((-81.05812 31.97596, -81.05809 31.976...</td>\n",
+       "      <td>POINT (-81.05815 31.97597)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>946</th>\n",
-       "      <td>Plant_1237059631</td>\n",
-       "      <td>POLYGON ((-81.38361 28.82465, -81.38261 28.824...</td>\n",
-       "      <td>POINT (-81.38249 28.82437)</td>\n",
+       "      <th>225</th>\n",
+       "      <td>Fowler Water Reclamation Facility</td>\n",
+       "      <td>POLYGON ((-84.21200 34.15300, -84.21215 34.154...</td>\n",
+       "      <td>POINT (-84.21485 34.15379)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>947</th>\n",
-       "      <td>Plant_1237059632</td>\n",
-       "      <td>POLYGON ((-81.38368 28.81960, -81.38290 28.819...</td>\n",
-       "      <td>POINT (-81.38212 28.82104)</td>\n",
+       "      <th>226</th>\n",
+       "      <td>Omega Treatment Plant</td>\n",
+       "      <td>POLYGON ((-83.59347 31.34101, -83.59364 31.340...</td>\n",
+       "      <td>POINT (-83.59349 31.34089)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>948</th>\n",
-       "      <td>Plant_1237059633</td>\n",
-       "      <td>POLYGON ((-81.39065 28.81890, -81.39011 28.818...</td>\n",
-       "      <td>POINT (-81.39020 28.82228)</td>\n",
+       "      <th>227</th>\n",
+       "      <td>Plant_1224973919</td>\n",
+       "      <td>POLYGON ((-84.23700 33.30543, -84.23655 33.305...</td>\n",
+       "      <td>POINT (-84.23634 33.30562)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>949 rows × 3 columns</p>\n",
+       "<p>228 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     WWTP_name  \\\n",
-       "0                               Plant_42335670   \n",
-       "1    North District Wastewater Treatment Plant   \n",
-       "2                         Seas Backwash Basins   \n",
-       "3                               Plant_75199142   \n",
-       "4             Pine Hills Water Treatment Plant   \n",
-       "..                                         ...   \n",
-       "944                           Plant_1237053617   \n",
-       "945                           Plant_1237058198   \n",
-       "946                           Plant_1237059631   \n",
-       "947                           Plant_1237059632   \n",
-       "948                           Plant_1237059633   \n",
+       "                                             WWTP_name  \\\n",
+       "0                                       Plant_31457419   \n",
+       "1                                       Plant_34770800   \n",
+       "2                                       Plant_34770998   \n",
+       "3                South Cobb Water Reclamation Facility   \n",
+       "4                                       Plant_34771069   \n",
+       "..                                                 ...   \n",
+       "223                                   Plant_1186316344   \n",
+       "224  Former Chatham County Sanitary Sewerage Lift S...   \n",
+       "225                  Fowler Water Reclamation Facility   \n",
+       "226                              Omega Treatment Plant   \n",
+       "227                                   Plant_1224973919   \n",
        "\n",
        "                                              geometry  \\\n",
-       "0    POLYGON ((-82.68656 27.71888, -82.68566 27.718...   \n",
-       "1    POLYGON ((-80.15290 25.92083, -80.15283 25.920...   \n",
-       "2    POLYGON ((-81.55302 28.37564, -81.55292 28.375...   \n",
-       "3    POLYGON ((-82.78727 28.01833, -82.78586 28.018...   \n",
-       "4    POLYGON ((-81.45539 28.56399, -81.45627 28.563...   \n",
+       "0    POLYGON ((-84.97626 32.41316, -84.97538 32.413...   \n",
+       "1    POLYGON ((-84.56326 33.34549, -84.56406 33.345...   \n",
+       "2    POLYGON ((-84.55196 33.74347, -84.55110 33.743...   \n",
+       "3    POLYGON ((-84.53757 33.77225, -84.54008 33.773...   \n",
+       "4    POLYGON ((-83.59370 33.95150, -83.59415 33.950...   \n",
        "..                                                 ...   \n",
-       "944  POLYGON ((-81.21605 28.62159, -81.21608 28.621...   \n",
-       "945  POLYGON ((-81.28426 28.68673, -81.28608 28.687...   \n",
-       "946  POLYGON ((-81.38361 28.82465, -81.38261 28.824...   \n",
-       "947  POLYGON ((-81.38368 28.81960, -81.38290 28.819...   \n",
-       "948  POLYGON ((-81.39065 28.81890, -81.39011 28.818...   \n",
+       "223  POLYGON ((-85.34845 34.46021, -85.34848 34.460...   \n",
+       "224  POLYGON ((-81.05812 31.97596, -81.05809 31.976...   \n",
+       "225  POLYGON ((-84.21200 34.15300, -84.21215 34.154...   \n",
+       "226  POLYGON ((-83.59347 31.34101, -83.59364 31.340...   \n",
+       "227  POLYGON ((-84.23700 33.30543, -84.23655 33.305...   \n",
        "\n",
        "                       centroid  \n",
-       "0    POINT (-82.68428 27.71757)  \n",
-       "1    POINT (-80.15027 25.91937)  \n",
-       "2    POINT (-81.55280 28.37562)  \n",
-       "3    POINT (-82.78684 28.01985)  \n",
-       "4    POINT (-81.45590 28.56545)  \n",
+       "0    POINT (-84.97721 32.41063)  \n",
+       "1    POINT (-84.56446 33.34747)  \n",
+       "2    POINT (-84.55363 33.74202)  \n",
+       "3    POINT (-84.53795 33.77505)  \n",
+       "4    POINT (-83.59615 33.95137)  \n",
        "..                          ...  \n",
-       "944  POINT (-81.21662 28.62162)  \n",
-       "945  POINT (-81.28584 28.68695)  \n",
-       "946  POINT (-81.38249 28.82437)  \n",
-       "947  POINT (-81.38212 28.82104)  \n",
-       "948  POINT (-81.39020 28.82228)  \n",
+       "223  POINT (-85.34755 34.45935)  \n",
+       "224  POINT (-81.05815 31.97597)  \n",
+       "225  POINT (-84.21485 34.15379)  \n",
+       "226  POINT (-83.59349 31.34089)  \n",
+       "227  POINT (-84.23634 33.30562)  \n",
        "\n",
-       "[949 rows x 3 columns]"
+       "[228 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,15 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "plotting bounding box:   2%|▏         | 5/219 [00:13<13:34,  3.81s/it]"
+     ]
+    }
+   ],
    "source": [
+    "# Added progress bar\n",
     "# use loop to open the image in tif folder, and plot the bounding box on it\n",
     "# read all the file names in the folder\n",
-    "for file in os.listdir('tif_bounding_box/Images of All 50 States/Florida'):\n",
+    "directory = 'tif_bounding_box/Images of All 50 States/Georgia'\n",
+    "files = os.listdir(directory)\n",
+    "\n",
+    "for file in tqdm(files, desc='plotting bounding box'):\n",
     "    try:\n",
-    "        with rasterio.open(os.path.join('tif_bounding_box/Images of All 50 States/Florida', file)) as src:\n",
+    "        with rasterio.open(os.path.join(directory, file)) as src:\n",
     "            # if file.startswith('download'):\n",
     "                # continue\n",
     "            # Read the image data\n",
@@ -286,11 +300,18 @@
     "            df_name.boundary.plot(ax=ax, color='red', linewidth=1.5)\n",
     "            plt.axis('off')\n",
     "            # save the figure\n",
-    "            plt.savefig(os.path.join('tif_bounding_box/Images of All 50 States/Florida', name + '.png'), bbox_inches='tight', pad_inches=0)\n",
+    "            plt.savefig(os.path.join(directory, name + '.png'), bbox_inches='tight', pad_inches=0)\n",
     "            plt.close()\n",
     "    except:\n",
     "        print(f\"fail to plot {file}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
